[package]
name = "rust-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7.0"
num = "0.4.0"
rand = {version = "0.8.5", features = ["small_rng"]}

# csound = "^0.1.5"
# csound-sys = "0.1.2"
